# oh-my-music

./: .gitignore  Cargo.toml  README.md
.github/workflows/: agent.yml  rust.yml
agent/: package.json  tsconfig.json
agent/src/: engine-client.ts  index.ts  ipc.ts
agent/src/agent/: context.ts  decision.ts  extension.ts
agent/src/agent/tools/: energy.ts  glicol.ts  utility.ts
agent/src/analysis/: pipeline.ts
agent/src/analysis/__tests__/: audio-understanding.serialization.test.ts
agent/src/analysis/fixtures/: audio-understanding-fixture.ts  audio-understanding-v1.json
agent/src/interface/discord/: bot.ts
agent/src/pattern/: templates.ts
agent/src/profile/: store.ts
crates/omm-audio/: Cargo.toml
crates/omm-audio/src/: channel.rs  command.rs  constants.rs  demo.rs  frame.rs  lib.rs  meter.rs  mixer.rs  runtime.rs  scheduler.rs  understanding.rs
crates/omm-audio/src/dsp/: effects.rs  filters.rs  gain.rs  limiter.rs  mod.rs  pan.rs  safety.rs  smoothing.rs
crates/omm-audio/src/features/: analyzer.rs  mod.rs  types.rs
crates/omm-audio/src/output/: discord_sink.rs  mod.rs
crates/omm-audio/src/source/: glicol.rs  mic.rs  mod.rs  musical_test.rs  player.rs  test_tone.rs
crates/omm-engine/: Cargo.toml
crates/omm-engine/src/: cpal_io.rs  cpal_output.rs  lib.rs  main.rs
crates/omm-protocol/: Cargo.toml
crates/omm-protocol/src/: envelope.rs  lib.rs  messages.rs  params.rs  scheduler.rs  source_timeline.rs  validation.rs
docs/: ARCHITECTURE.md
docs/adr/: 001-unify-channel-api.md
