[package]
name = "omm-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpal.workspace = true
glicol.workspace = true
omm-protocol = { path = "../omm-protocol" }
realfft.workspace = true
ringbuf.workspace = true
rubato.workspace = true
serde.workspace = true
symphonia.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json = "1"
