[package]
name = "omm-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cpal.workspace = true
omm-audio = { path = "../omm-audio" }
omm-protocol = { path = "../omm-protocol" }
thiserror.workspace = true
tokio.workspace = true
